--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="@color/white">
 
-    <Button
-            android:id="@+id/btnSendChatMsg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="发送聊天消息"/>
+    <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs"
+            style="@style/MyCustomTabLayout_HomePage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <Button
-            android:id="@+id/btnSendSubscribeMsg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="发送订阅消息"/>
+    <View android:layout_width="match_parent"
+          android:layout_height="10dp"
+          android:background="@color/color_gray_f4f4f4"/>
 
-
-    <Button
-            android:id="@+id/btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="弹出通知"/>
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
 </LinearLayout>
