增加库core模块

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -20,6 +20,6 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_16"
             android:textColor="@color/black"
-            tools:text="hhhhhhhhhhhhhh"/>
+            android:text="hhhhhhhhhhhhhh"/>
 
 </LinearLayout>
